<resources>
    <string name="app_name">IFRS - Campus Rolante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_oportunidades">Oportunidades Acadêmicas</string>
    <string name="menu_inscricoes">Inscrições</string>
    <string name="menu_transporte">Transporte</string>
    <string name="rolante">IFRS - Campus Rolante</string>
    <string name="nucleos">Núcleos e Grupos de Estudos</string>
    <string name="gepea">GEPEA</string>
    <string name="redes">Redes Sociais</string>
    <string name="dev">Desenvolvedoras</string>
    <string name="campusrolante">Campus Rolante</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cursos">Cursos</string>
    <string name="adm">Administração</string>
    <string name="info">Informática</string>
    <string name="ads">Analise e desenvolvimento de sistemas</string>
    <string name="tpg">Processos Gerenciais</string>
    <string name="comercio">Comércio - PROEJA</string>
    <string name="agro">Agropecuária</string>
    <string name="bolsas">Bolsas</string>
    <string name="esportes">Esportes</string>
    <string name="visitas">Visitas técnicas</string>
    <string name="feiras">Feiras Científicas</string>
    <string name="olimpiadas">Olimpíadas de conhecimento</string>
    <string name="intercambio">Intercâmbio</string>
    <string name="admpreja">Administração - EJA EPT</string>
    <string name="numen">NuMem</string>
    <string name="nepgs">NEPGS</string>
    <string name="napne">NAPNE</string>
    <string name="neabi">NEABI</string>
    <string name="descricao_campus">Foto do IFRS Campus Rolante</string>
    <string name="history_campus">      O Campus Rolante iniciou sua história em 2015 e, já em 2016, abriu as portas com os primeiros cursos técnicos de Administração, Agropecuária e Qualidade. No ano seguinte, chegaram os cursos integrados ao Ensino Médio, incluindo o PROEJA.

Em 2017, o campus se mudou pra sede própria: um espaço de 57 hectares, com prédio moderno, 10 salas de aula e laboratórios. Hoje, a instituição possui  mais de 480 estudantes, em cursos técnicos, integrados e de extensão — manhã, tarde e noite.

Com foco em formar profissionais preparados para o mercado, o campus atua nos eixos de Gestão de Negócios, TI e Recursos Naturais, definidos junto à comunidade local.

Ah, e um detalhe importante: o Campus Rolante é a única instituição pública federal de educação profissional do Vale do Paranhana, região com cerca de 200 mil pessoas.</string>
    <string name="location_campus">Rodovia RS-239, Km 68, Nº 3505 (Estrada Taquara/Rolante) | CEP: 95690-000 | Rolante/RS Caixa Postal 118 (correspondência) | Telefone: (51) 3547-9600</string>
    <string name="nucleosif">Os núcleos e grupos de estudos do IFRS, presentes em campi como o de Rolante, são espaços de apoio e coordenação dedicados a áreas específicas, como educação a distância, arte e cultura, estudos afro-brasileiros e indígenas, gênero e sexualidade, entre outras. Com atuação integrada ao ensino, à pesquisa, à extensão e às ações afirmativas, eles fortalecem a formação de profissionais e promovem a inclusão e a valorização da diversidade na comunidade acadêmica.</string>
    <string name="nucleodememorias">Núcleo de Memória (NuMem) </string>
    <string name="memorias">O Núcleo de Memória (NuMem) do Campus Rolante tem por objetivo atuar na preservação da memória institucional do campus. É vinculado ao Núcleo de Memória do IFRS – programa institucional, de caráter interdisciplinar e multicampi que visa a consolidação da memória e da identidade da instituição, por meio do resgate e da socialização da história da IFRS, seja ela anterior a sua criação ou posterior a ela.
 </string>
    <string name="instanumen"> Instagram: @numemifrs_oficial</string>
    <string name="contatonumen">Contato: numem@rolante.ifrs.edu.br</string>
    <string name="sitenumen">Site: https://memoria.ifrs.edu.br</string>
    <string name="linhadotempo">Linha do tempo Campus Rolante: https://memoria.ifrs.edu.br/timeline/unidade/campus-rolante/</string>
    <string name="sexualidade">Núcleo de Estudo e Pesquisa em Gênero e Sexualidade (NEPGS) </string>
    <string name="intanepgs"> Instagram: @nepgs_rolante_ifrs</string>
    <string name="descrinepgs"> O NEPGS é um espaço voltado à discussão da igualdade de gênero. Também temos como objetivos o respeito à diversidade sexual e a implementação de ações afirmativas e inclusivas. Nosso objetivo é promover a informação e incentivar o debate sadio. Prezamos também pela democratização no interior dos núcleos, buscando a parceria com entidades, coletivos, instituições, bem como a participação de pessoas físicas interessadas em conhecer, debater e propor ações que construam uma sociedade igualitária, justa e sem preconceitos.
</string>
    <string name="contatonepgs"> Contato: nepgs@rolante.ifrs.edu.br</string>
    <string name="afro"> Núcleo de Estudos Afro-Brasileiros e Indígenas (NEABI)</string>
    <string name="instaneabi"> Instagram: @neabifrsrolante, @gepea.ifrs</string>
    <string name="desneabi"> É um espaço cujo propósito é estudar e debater as relações étnico-raciais na sociedade brasileira, em especial no Campus Rolante. Busca fomentar estudo, pesquisa e extensão a partir do desenvolvimento de programas e projetos em diversas áreas do conhecimento.</string>
    <string name="contatoneabi"> Contato: neabi@rolante.ifrs.edu.br</string>
    <string name="pessoascomnecessidades">Núcleo de Atendimento às Pessoas com Necessidades Educacionais Específicas (NAPNE)
 </string>
    <string name="instanapne"> Instagram: @napne_rolante</string>
    <string name="contatonapne"> Contato: napne@rolante.ifrs.edu.br</string>
    <string name="desnapne"> Os NAPNEs são facilitadores e disseminadores de ações inclusivas, buscando não apenas a inclusão de alunos com necessidades educacionais específicas nos bancos escolares, mas, também, sua permanência e saída exitosa para o mundo do trabalho, atuando no ensino, na pesquisa e na extensão.
</string>
    <string name="pesquisa"> Pesquisa</string>
    <string name="pesquisab"> Bolsas de Pesquisa</string>
    <string name="ensino">Ensino</string>
    <string name="ensinob"> Bolsas de Ensino</string>
    <string name="extensao">Extensão</string>
    <string name="extensaob"> Bolsas de Extensão</string>
    <string name="indissociaveisb"> Bolsas Indissociáveis</string>
    <string name="indissociaveis"> Indissociáveis</string>
    <string name="bolsasdes">O IF oferece diversas oportunidades de bolsas de iniciação científica, divididas nas modalidades de Ensino, Extensão, Pesquisa e Indissociáveis. Essas bolsas permitem que os estudantes participem de projetos coordenados por servidores do instituto, recebendo um valor mensal de acordo com a carga horária semanal dedicada às atividades. Os valores são proporcionais ao tempo de dedicação: R\$175,00 para 4 horas semanais, R\$350,00 para 8 horas, R\$525,00 para 12 horas e R\$700,00 para 16 horas semanais. Aqueles que não forem contemplados com as bolsas podem participar como voluntários.
</string>
    <string name="desensino"> Os projetos de Ensino são voltados principalmente para a comunidade interna do campus e têm como objetivo fortalecer os processos de aprendizagem e apoio pedagógico. Dentro dessa modalidade, destaca-se a monitoria, em que estudantes auxiliam colegas em disciplinas específicas, contribuindo para a melhoria do desempenho acadêmico e o fortalecimento da troca de conhecimentos.
</string>
    <string name="instaensino"> A seguir alguns projetos de ensino que atuam na nossa instituição: \n@englishclub_ifrs_rolante \n@bovinocultura.ifrs \n@clube_astronomia_rolante
</string>
    <string name="instapesquisa"> A seguir o insta de um projeto de pesquisa que atua no Campus Rolante: \n@projeto_hidromet
</string>
    <string name="instaextensao"> A seguir alguns projetos de extensão que atuam no Campus Rolante: \n@ciencia_itinerante_ifrsrolante \n@horah_rolante_ifrs \n@inspirando_gurias
</string>
    <string name="instaindissociaveis"> A seguir o insta de um projeto indissociável que atua no Campus Rolante:  \n@fortalecendo.a_sabedoria</string>
    <string name="desextensao"> Os projetos de Extensão têm como foco principal a interação entre o IF e a comunidade externa, promovendo a troca de saberes e contribuindo para o desenvolvimento social, cultural e tecnológico da região. Essas ações buscam levar o conhecimento produzido no campus para além de seus muros, fortalecendo o vínculo com a sociedade e promovendo a cidadania.
</string>
    <string name="desindissociaveis">Os projetos Indissociáveis envolvem, de forma integrada, ações de Ensino, Pesquisa e Extensão. Essa modalidade promove uma formação mais completa, permitindo que os estudantes atuem em atividades que articulam a produção de conhecimento, o aprendizado em sala de aula e a aplicação prática junto à comunidade, ampliando o impacto e o alcance das ações desenvolvidas no IF.</string>
    <string name="despesquisa">Os projetos de Pesquisa têm como objetivo a produção de conhecimento científico a partir da investigação de problemas e temas relevantes em diversas áreas. Voltados tanto para a comunidade interna quanto externa, esses projetos estimulam o pensamento crítico, a curiosidade e o desenvolvimento de habilidades investigativas, aproximando os estudantes do universo acadêmico e da ciência.</string>
    <string name="esportivas"> Oportunidades esportivas</string>
    <string name="trandsportesif">Transportes IFRS</string>
    <string name="rmb">RBM Transportes</string>
    <string name="rmbcontato">Contato: (51) 9 9669-3410</string>
    <string name="rmbrota">Rota: Parobé e Taquara</string>
    <string name="maroto">Maroto Viagens</string>
    <string name="macontato">Contato: (51) 9 9546-5084</string>
    <string name="marota">Rota: Parobé e Taquara</string>
    <string name="citral"> Citral</string>
    <string name="cicontato">Contato: (51) 9 9454-6869</string>
    <string name="cirota">Rota: Parobé, Taquara, Igrejinha e Santo Antônio</string>
    <string name="ci">    Passe livre ou por vale transporte</string>
    <string name="dc">DC Turismo</string>
    <string name="dccontato">Contato 1: (51) 99646-6420</string>
    <string name="dcrota">Rota: Parobé e Taquara</string>
    <string name="dccontato2">Contato 2: (51) 99757-2416</string>
    <string name="mw">MW</string>
    <string name="mwcontato">Contato: (51) 99779-6900</string>
    <string name="mwrota">Rota: Rolante</string>
    <string name="salvador">Salvador</string>
    <string name="sacontato">Contato: (51) 9 8331-083</string>
    <string name="sarota">Rota: Parobé, Taquara e Igrejinha</string>
    <string name="tche">Tchê Leva</string>
    <string name="tchecontato">Contato: (51) 9 9707-2829</string>
    <string name="tcherota">Rota: Rolante e Riozinho</string>
    <string name="publico">Transporte Público de Rolante</string>
    <string name="pucontato">Embarque em frente à escola Souza Cruz</string>
    <string name="purota">Rota: Rolante</string>
    <string name="puhor">Horários: 07h15 (manhã), 13h (tarde) e 19h (noite)</string>
</resources>